test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/testframe3/testframe3/node_modules/motion-utils/lib/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from "./errors";
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 2 |[39m [36mimport[39m { useNavigate } [36mfrom[39m [32m'react-router-dom'[39m[33m;[39m
     [90m 3 |[39m [36mimport[39m [33mReact[39m[33m,[39m { useState } [36mfrom[39m [32m'react'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 4 |[39m [36mimport[39m { motion } [36mfrom[39m [32m'framer-motion'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 5 |[39m [36mimport[39m styled[33m,[39m { [33mThemeProvider[39m[33m,[39m createGlobalStyle } [36mfrom[39m [32m'styled-components'[39m[33m;[39m
     [90m 6 |[39m [36mimport[39m { [33mFaArrowRight[39m[33m,[39m [33mFaMoon[39m[33m,[39m [33mFaSun[39m[33m,[39m [33mFaMicrophone[39m } [36mfrom[39m [32m'react-icons/fa'[39m[33m;[39m
     [90m 7 |[39m [36mimport[39m speechHandler [36mfrom[39m [32m'./SpeechHandler'[39m[33m;[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (node_modules/framer-motion/dist/cjs/index.js:5:19)
      at Object.<anonymous> (src/pages/HomePage.tsx:4:1)
      at Object.<anonymous> (src/App.tsx:5:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

--------------------------|---------|----------|---------|---------|-------------------
File                      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------------|---------|----------|---------|---------|-------------------
All files                 |       0 |        0 |       0 |       0 |                   
 src                      |       0 |        0 |       0 |       0 |                   
  App.tsx                 |       0 |      100 |       0 |       0 | 11                
  RTC.tsx                 |       0 |        0 |       0 |       0 | 9-98              
  VoiceCommands.ts        |       0 |        0 |       0 |       0 | 10-77             
  bpoly.ts                |       0 |        0 |       0 |       0 | 9-104             
  index.tsx               |       0 |      100 |     100 |       0 | 7-19              
  movementUtils.ts        |       0 |        0 |       0 |       0 | 6-22              
  polygonUtils.ts         |       0 |      100 |       0 |       0 | 6-14              
  reportWebVitals.ts      |       0 |        0 |       0 |       0 | 3-10              
  speech.tsx              |       0 |        0 |       0 |       0 | 14-58             
 src/components           |       0 |      100 |       0 |       0 |                   
  NavBar.tsx              |       0 |      100 |       0 |       0 | 6-29              
 src/pages                |       0 |        0 |       0 |       0 |                   
  DetectedObjectsPage.tsx |       0 |        0 |       0 |       0 | 19-196            
  FindObjectPage.tsx      |       0 |        0 |       0 |       0 | 19-209            
  HomePage.tsx            |       0 |        0 |       0 |       0 | 10-258            
  SettingsPage.tsx        |       0 |      100 |       0 |       0 | 4-5               
  SpeechHandler.ts        |       0 |        0 |       0 |       0 | 16-68             
--------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.249 s
Ran all test suites.
